resources/scss/employee/_side-top-bar.scss
@tailwind base;
@tailwind components;
@tailwind utilities;
@import '../utils';
@import '../input/search';

/* Adjusting transition duration may need to adjust delay of removing opeing class in sidebar on side-top-bar.js */

:root {
    --main-menu-padding-top: clamp(1rem, 0.5rem + 1dvh, 4rem);
    --sidebar-width: clamp(48px, 16px + 1.5rem + 5vw, 200px);
    --sidebar-width-active: clamp(200px + 2rem, 128px + 1.5rem + 10vw, 696px + 4rem);
    --topbar-padding-x: clamp(1rem, 0.5rem + 5dvw, 4rem);
    --topnav-padding-x: clamp(1.25rem, 0.63rem + 2dvw, 4rem);
    --topnav-padding-y: clamp(0.5rem, 0.25rem + 0.5dvw, 2rem);
}

main {
    contain: paint;
    position: relative;
    /* Ofset of main content below of top bar */
    margin-top: calc(var(--main-menu-padding-top) + var(--topnav-padding-y) + var(--search-height) + var(--search-padding-y) + var(--main-menu-padding-top) + 1vh);

    @media screen and (min-width: 768px) {
        left: var(--sidebar-width);
        max-width: calc(95cqw - var(--sidebar-width));
    }
}

.main-menu-container {
    padding: 0;
    z-index: 1000;

    &:has(sidebar.main-menu.active) {
        @media screen and (max-width: 576px) {

            &::before {
                content: '';
                left: 0;
                transition: background-color ease-in-out 0.5s;
                position: absolute;
                height: 110vh;
                width: 100vw;
                background-color: color-mix(in srgb, var(--bs-black) 10%, transparent);
            }
        }
    }
}

img.icon {
    width: calc(0.75rem + 0.5vw);
    height: auto;
    aspect-ratio: 1/1;
}

.icon.ellipsis {

    width: calc(0.75rem + 0.5vw + 0.5vh);
    height: calc(0.75rem + 0.5vw + 0.5vh);
    aspect-ratio: 1/1;

    circle {
        stroke-width: calc(0.063rem + 0.05vw + 0.05vh);
    }

}

sidebar.main-menu,
div:has(>.topnav) {
    --duration: 0.3s;
    --curve: ease-in-out;
    transition: width var(--duration) var(--curve), left var(--duration) var(--curve), opacity var(--duration) var(--curve);
}

main.main {
    --duration: 0.2s;
    --curve: ease-in-out;
    transition: width var(--duration) var(--curve), max-width var(--duration) var(--curve), left var(--duration) var(--curve), opacity var(--duration) var(--curve);

}


%main-menu-padding-top {
    padding-top: var(--main-menu-padding-top);
}
/* ... */

